Endpoint for adding a sensor for web and android